--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 requests
 fake_useragent
-time
-os
-threading
-threading import Thread
-rich.console import Console
-rich.progress import *
+threaded
+Console
+rich
